# pysourcenote

./: .gitignore  gc.md  minipython.md  object.md  readme.md  vm.md
minipython/: CMakeLists.txt  PyDictObject.cpp  PyIntObject.cpp  PyStrObject.h  PythonVM.cpp  PythonVM.h  python.cpp  readme.md
minipython/src/: CMakeCache.txt  CMakeLists.txt  Makefile  PyDictObject.hpp  PyIntObject.h  PyObject.h  PyStrObject.cpp  PyTypeObject.cpp  PyTypeObject.h  PythonVM.cpp  PythonVM.h  a.out  cmake_install.cmake  python.cpp
